<resources>
    <string name="app_name">Geo Task</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_save_task">Save Task</string>
    <string name="action_save_location">Save Location</string>
    <string name="remove_task">Remove Task</string>
    <string name="remove">REMOVE</string>
    <string name="range">Range</string>
    <string name="title_hint">Enter Title</string>
    <string name="expr_date">Expr Date</string>
    <string name="repeat">Repeat</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="range_hint">Range from location</string>
    <string name="expr_date_hint">mm-dd-yyyy</string>
    <string name="choose_location">Choose Location</string>
    <string name="add_location">Add Location</string>
    <string name="add_item">Add Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_new_location">Add New Location</string>
    <string name="add_detail_note">Add Detail Note</string>
    <string name="remove_item">Remove Item</string>
    <string name="item_list">Item List</string>
    <string name="note">Note</string>
    <string name="action_delete_task">Delete Task</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="location_list">Location List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Select Location</string>
    <string name="search_location">Search Location</string>
    <string name="notification">Notification</string>
</resources>
